--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -2,44 +2,35 @@
   --primarily-color: #5c715e;
   --secondary-color: #ddeedf;
   --primary-font: Didot;
-  --secondary-front: Helvetica, sans-serif;
+  --secondary-font: Helvetica, sans-serif;
 }
 
-.indexseite {
-  background-color: #ddeedf;
+.hero {
+  background-color: var(--secondary-color);
+  text-align: center;
+  padding: 160px 20px;
 }
 
-.container {
-  padding-top: 300px;
-  padding-right: 50px;
-  padding-left: 50px;
+.hero p {
+  font-family: var(--secondary-font);
+  font-size: 24px;
+  font-weight: bold;
+  color: var(--primarily-color);
+  margin: 0;
 }
 
 h1 {
-  text-align: center;
   font-family: Didot;
-  font-weight: 500;
-  font-size: 120px;
+  font-weight: bold;
   color: var(--primarily-color);
 }
 
-h2 {
-  text-align: center;
+.hero h2 {
   font-family: Helvetica, sans-serif;
-  font-size: 50px;
+  font-size: 18px;
   color: var(--primarily-color);
-}
-
-.intro {
-  display: block;
-  text-align: center;
-  font-family: Helvetica, sans-serif;
-  font-size: 15px;
-  color: var(--primarily-color);
-}
-
-button {
-  justify-content: center;
+  font-weight: normal;
+  line-height: 2;
 }
 
 .button-container {
@@ -67,10 +58,4 @@ button:hover {
   background-color: #b6cdbd;
   opacity: 0.5;
   color: var(--primariy-color);
-}
-
-.container {
-  justify-content: center;
-  margin: auto;
-  max-width: 100%;
 }
